=======
Changes
=======


1.1 (unreleased)
================

- Nothing changed yet.


1.0 (2011-01-31)
================

- Initial release